src/antlr/zapParser.cpp

// Generated from zap.g4 by ANTLR 4.13.2


#include "zapVisitor.h"

#include "zapParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ZapParserStaticData final {
  ZapParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ZapParserStaticData(const ZapParserStaticData&) = delete;
  ZapParserStaticData(ZapParserStaticData&&) = delete;
  ZapParserStaticData& operator=(const ZapParserStaticData&) = delete;
  ZapParserStaticData& operator=(ZapParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag zapParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ZapParserStaticData> zapParserStaticData = nullptr;

void zapParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (zapParserStaticData != nullptr) {
    return;
  }
#else
  assert(zapParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ZapParserStaticData>(
    std::vector<std::string>{
      "program", "declaration", "statement", "functionDecl", "attributeBlock", 
      "attributeList", "attribute", "attributeArgs", "attributeArg", "returnType", 
      "parameterList", "parameter", "type", "structDecl", "structField", 
      "componentDecl", "moduleDecl", "block", "variableDecl", "ifStmt", 
      "whileStmt", "forStmt", "returnStmt", "yieldStmt", "deferStmt", "expressionStmt", 
      "expression", "lvalue", "assignment", "logicOr", "logicAnd", "equality", 
      "comparison", "term", "factor", "unary", "call", "argumentList", "primary", 
      "aotBlock"
    },
    std::vector<std::string>{
      "", "';'", "'('", "')'", "'@'", "'['", "']'", "','", "':'", "'{'", 
      "'}'", "'='", "'.'", "", "'if'", "'else'", "'while'", "'for'", "'return'", 
      "'yield'", "'defer'", "'let'", "'func'", "'struct'", "'component'", 
      "'readonly'", "'module'", "'aot'", "'ref'", "'void'", "'->'", "'use'", 
      "'||'", "'&&'", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", 
      "'<'", "'<='", "'>'", "'>='", "'!'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "BOOL", "IF", 
      "ELSE", "WHILE", "FOR", "RETURN", "YIELD", "DEFER", "LET", "FUNC", 
      "STRUCT", "COMPONENT", "READONLY", "MODULE", "AOT", "REF", "VOID", 
      "ARROW", "USE", "OR", "AND", "EQ", "NEQ", "ADD", "SUB", "MUL", "DIV", 
      "MOD", "LT", "LTE", "GT", "GTE", "NOT", "INT", "FLOAT", "STRING", 
      "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  zapParserStaticData = std::move(staticData);
}

}

zapParser::zapParser(TokenStream *input) : zapParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

zapParser::zapParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  zapParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *zapParserStaticData->atn, zapParserStaticData->decisionToDFA, zapParserStaticData->sharedContextCache, options);
}

zapParser::~zapParser() {
  delete _interpreter;
}

const atn::ATN& zapParser::getATN() const {
  return *zapParserStaticData->atn;
}

std::string zapParser::getGrammarFileName() const {
  return "zap.g4";
}

const std::vector<std::string>& zapParser::getRuleNames() const {
  return zapParserStaticData->ruleNames;
}

const dfa::Vocabulary& zapParser::getVocabulary() const {
  return zapParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView zapParser::getSerializedATN() const {
  return zapParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

zapParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* zapParser::ProgramContext::EOF() {
  return getToken(zapParser::EOF, 0);
}

std::vector<zapParser::DeclarationContext *> zapParser::ProgramContext::declaration() {
  return getRuleContexts<zapParser::DeclarationContext>();
}

zapParser::DeclarationContext* zapParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<zapParser::DeclarationContext>(i);
}


size_t zapParser::ProgramContext::getRuleIndex() const {
  return zapParser::RuleProgram;
}


std::any zapParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

zapParser::ProgramContext* zapParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, zapParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 130023440) != 0)) {
      setState(80);
      declaration();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    match(zapParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

zapParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

zapParser::FunctionDeclContext* zapParser::DeclarationContext::functionDecl() {
  return getRuleContext<zapParser::FunctionDeclContext>(0);
}

zapParser::StructDeclContext* zapParser::DeclarationContext::structDecl() {
  return getRuleContext<zapParser::StructDeclContext>(0);
}

zapParser::ComponentDeclContext* zapParser::DeclarationContext::componentDecl() {
  return getRuleContext<zapParser::ComponentDeclContext>(0);
}

zapParser::ModuleDeclContext* zapParser::DeclarationContext::moduleDecl() {
  return getRuleContext<zapParser::ModuleDeclContext>(0);
}


size_t zapParser::DeclarationContext::getRuleIndex() const {
  return zapParser::RuleDeclaration;
}


std::any zapParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

zapParser::DeclarationContext* zapParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, zapParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case zapParser::T__3:
      case zapParser::FUNC: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        functionDecl();
        break;
      }

      case zapParser::STRUCT: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        structDecl();
        break;
      }

      case zapParser::COMPONENT:
      case zapParser::READONLY: {
        enterOuterAlt(_localctx, 3);
        setState(90);
        componentDecl();
        break;
      }

      case zapParser::MODULE: {
        enterOuterAlt(_localctx, 4);
        setState(91);
        moduleDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

zapParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

zapParser::VariableDeclContext* zapParser::StatementContext::variableDecl() {
  return getRuleContext<zapParser::VariableDeclContext>(0);
}

zapParser::ExpressionStmtContext* zapParser::StatementContext::expressionStmt() {
  return getRuleContext<zapParser::ExpressionStmtContext>(0);
}

zapParser::BlockContext* zapParser::StatementContext::block() {
  return getRuleContext<zapParser::BlockContext>(0);
}

zapParser::IfStmtContext* zapParser::StatementContext::ifStmt() {
  return getRuleContext<zapParser::IfStmtContext>(0);
}

zapParser::WhileStmtContext* zapParser::StatementContext::whileStmt() {
  return getRuleContext<zapParser::WhileStmtContext>(0);
}

zapParser::ForStmtContext* zapParser::StatementContext::forStmt() {
  return getRuleContext<zapParser::ForStmtContext>(0);
}

zapParser::ReturnStmtContext* zapParser::StatementContext::returnStmt() {
  return getRuleContext<zapParser::ReturnStmtContext>(0);
}

zapParser::YieldStmtContext* zapParser::StatementContext::yieldStmt() {
  return getRuleContext<zapParser::YieldStmtContext>(0);
}

zapParser::DeferStmtContext* zapParser::StatementContext::deferStmt() {
  return getRuleContext<zapParser::DeferStmtContext>(0);
}


size_t zapParser::StatementContext::getRuleIndex() const {
  return zapParser::RuleStatement;
}


std::any zapParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

zapParser::StatementContext* zapParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, zapParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(105);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case zapParser::LET: {
        enterOuterAlt(_localctx, 1);
        setState(94);
        variableDecl();
        setState(95);
        match(zapParser::T__0);
        break;
      }

      case zapParser::T__1:
      case zapParser::BOOL:
      case zapParser::SUB:
      case zapParser::NOT:
      case zapParser::INT:
      case zapParser::FLOAT:
      case zapParser::STRING:
      case zapParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(97);
        expressionStmt();
        break;
      }

      case zapParser::T__8: {
        enterOuterAlt(_localctx, 3);
        setState(98);
        block();
        break;
      }

      case zapParser::IF: {
        enterOuterAlt(_localctx, 4);
        setState(99);
        ifStmt();
        break;
      }

      case zapParser::WHILE: {
        enterOuterAlt(_localctx, 5);
        setState(100);
        whileStmt();
        break;
      }

      case zapParser::FOR: {
        enterOuterAlt(_localctx, 6);
        setState(101);
        forStmt();
        break;
      }

      case zapParser::RETURN: {
        enterOuterAlt(_localctx, 7);
        setState(102);
        returnStmt();
        break;
      }

      case zapParser::YIELD: {
        enterOuterAlt(_localctx, 8);
        setState(103);
        yieldStmt();
        break;
      }

      case zapParser::DEFER: {
        enterOuterAlt(_localctx, 9);
        setState(104);
        deferStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

zapParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* zapParser::FunctionDeclContext::FUNC() {
  return getToken(zapParser::FUNC, 0);
}

tree::TerminalNode* zapParser::FunctionDeclContext::IDENTIFIER() {
  return getToken(zapParser::IDENTIFIER, 0);
}

zapParser::ReturnTypeContext* zapParser::FunctionDeclContext::returnType() {
  return getRuleContext<zapParser::ReturnTypeContext>(0);
}

zapParser::BlockContext* zapParser::FunctionDeclContext::block() {
  return getRuleContext<zapParser::BlockContext>(0);
}

zapParser::AttributeBlockContext* zapParser::FunctionDeclContext::attributeBlock() {
  return getRuleContext<zapParser::AttributeBlockContext>(0);
}

zapParser::ParameterListContext* zapParser::FunctionDeclContext::parameterList() {
  return getRuleContext<zapParser::ParameterListContext>(0);
}


size_t zapParser::FunctionDeclContext::getRuleIndex() const {
  return zapParser::RuleFunctionDecl;
}


std::any zapParser::FunctionDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitFunctionDecl(this);
  else
    return visitor->visitChildren(this);
}

zapParser::FunctionDeclContext* zapParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, zapParser::RuleFunctionDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == zapParser::T__3) {
      setState(107);
      attributeBlock();
    }
    setState(110);
    match(zapParser::FUNC);
    setState(111);
    match(zapParser::IDENTIFIER);
    setState(112);
    match(zapParser::T__1);
    setState(114);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == zapParser::IDENTIFIER) {
      setState(113);
      parameterList();
    }
    setState(116);
    match(zapParser::T__2);
    setState(117);
    returnType();
    setState(118);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeBlockContext ------------------------------------------------------------------

zapParser::AttributeBlockContext::AttributeBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

zapParser::AttributeListContext* zapParser::AttributeBlockContext::attributeList() {
  return getRuleContext<zapParser::AttributeListContext>(0);
}


size_t zapParser::AttributeBlockContext::getRuleIndex() const {
  return zapParser::RuleAttributeBlock;
}


std::any zapParser::AttributeBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitAttributeBlock(this);
  else
    return visitor->visitChildren(this);
}

zapParser::AttributeBlockContext* zapParser::attributeBlock() {
  AttributeBlockContext *_localctx = _tracker.createInstance<AttributeBlockContext>(_ctx, getState());
  enterRule(_localctx, 8, zapParser::RuleAttributeBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(zapParser::T__3);
    setState(121);
    match(zapParser::T__4);
    setState(122);
    attributeList();
    setState(123);
    match(zapParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeListContext ------------------------------------------------------------------

zapParser::AttributeListContext::AttributeListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<zapParser::AttributeContext *> zapParser::AttributeListContext::attribute() {
  return getRuleContexts<zapParser::AttributeContext>();
}

zapParser::AttributeContext* zapParser::AttributeListContext::attribute(size_t i) {
  return getRuleContext<zapParser::AttributeContext>(i);
}


size_t zapParser::AttributeListContext::getRuleIndex() const {
  return zapParser::RuleAttributeList;
}


std::any zapParser::AttributeListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitAttributeList(this);
  else
    return visitor->visitChildren(this);
}

zapParser::AttributeListContext* zapParser::attributeList() {
  AttributeListContext *_localctx = _tracker.createInstance<AttributeListContext>(_ctx, getState());
  enterRule(_localctx, 10, zapParser::RuleAttributeList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    attribute();
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == zapParser::T__6) {
      setState(126);
      match(zapParser::T__6);
      setState(127);
      attribute();
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

zapParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* zapParser::AttributeContext::IDENTIFIER() {
  return getToken(zapParser::IDENTIFIER, 0);
}

zapParser::AttributeArgsContext* zapParser::AttributeContext::attributeArgs() {
  return getRuleContext<zapParser::AttributeArgsContext>(0);
}


size_t zapParser::AttributeContext::getRuleIndex() const {
  return zapParser::RuleAttribute;
}


std::any zapParser::AttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitAttribute(this);
  else
    return visitor->visitChildren(this);
}

zapParser::AttributeContext* zapParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 12, zapParser::RuleAttribute);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(133);
    match(zapParser::IDENTIFIER);
    setState(139);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == zapParser::T__1) {
      setState(134);
      match(zapParser::T__1);
      setState(136);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 914793674309632) != 0)) {
        setState(135);
        attributeArgs();
      }
      setState(138);
      match(zapParser::T__2);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeArgsContext ------------------------------------------------------------------

zapParser::AttributeArgsContext::AttributeArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<zapParser::AttributeArgContext *> zapParser::AttributeArgsContext::attributeArg() {
  return getRuleContexts<zapParser::AttributeArgContext>();
}

zapParser::AttributeArgContext* zapParser::AttributeArgsContext::attributeArg(size_t i) {
  return getRuleContext<zapParser::AttributeArgContext>(i);
}


size_t zapParser::AttributeArgsContext::getRuleIndex() const {
  return zapParser::RuleAttributeArgs;
}


std::any zapParser::AttributeArgsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitAttributeArgs(this);
  else
    return visitor->visitChildren(this);
}

zapParser::AttributeArgsContext* zapParser::attributeArgs() {
  AttributeArgsContext *_localctx = _tracker.createInstance<AttributeArgsContext>(_ctx, getState());
  enterRule(_localctx, 14, zapParser::RuleAttributeArgs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(141);
    attributeArg();
    setState(146);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == zapParser::T__6) {
      setState(142);
      match(zapParser::T__6);
      setState(143);
      attributeArg();
      setState(148);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeArgContext ------------------------------------------------------------------

zapParser::AttributeArgContext::AttributeArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* zapParser::AttributeArgContext::IDENTIFIER() {
  return getToken(zapParser::IDENTIFIER, 0);
}

tree::TerminalNode* zapParser::AttributeArgContext::STRING() {
  return getToken(zapParser::STRING, 0);
}

tree::TerminalNode* zapParser::AttributeArgContext::INT() {
  return getToken(zapParser::INT, 0);
}


size_t zapParser::AttributeArgContext::getRuleIndex() const {
  return zapParser::RuleAttributeArg;
}


std::any zapParser::AttributeArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitAttributeArg(this);
  else
    return visitor->visitChildren(this);
}

zapParser::AttributeArgContext* zapParser::attributeArg() {
  AttributeArgContext *_localctx = _tracker.createInstance<AttributeArgContext>(_ctx, getState());
  enterRule(_localctx, 16, zapParser::RuleAttributeArg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 914793674309632) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnTypeContext ------------------------------------------------------------------

zapParser::ReturnTypeContext::ReturnTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* zapParser::ReturnTypeContext::ARROW() {
  return getToken(zapParser::ARROW, 0);
}

zapParser::TypeContext* zapParser::ReturnTypeContext::type() {
  return getRuleContext<zapParser::TypeContext>(0);
}


size_t zapParser::ReturnTypeContext::getRuleIndex() const {
  return zapParser::RuleReturnType;
}


std::any zapParser::ReturnTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitReturnType(this);
  else
    return visitor->visitChildren(this);
}

zapParser::ReturnTypeContext* zapParser::returnType() {
  ReturnTypeContext *_localctx = _tracker.createInstance<ReturnTypeContext>(_ctx, getState());
  enterRule(_localctx, 18, zapParser::RuleReturnType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    match(zapParser::ARROW);
    setState(152);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

zapParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<zapParser::ParameterContext *> zapParser::ParameterListContext::parameter() {
  return getRuleContexts<zapParser::ParameterContext>();
}

zapParser::ParameterContext* zapParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<zapParser::ParameterContext>(i);
}


size_t zapParser::ParameterListContext::getRuleIndex() const {
  return zapParser::RuleParameterList;
}


std::any zapParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

zapParser::ParameterListContext* zapParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 20, zapParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(154);
    parameter();
    setState(159);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == zapParser::T__6) {
      setState(155);
      match(zapParser::T__6);
      setState(156);
      parameter();
      setState(161);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

zapParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* zapParser::ParameterContext::IDENTIFIER() {
  return getToken(zapParser::IDENTIFIER, 0);
}

zapParser::TypeContext* zapParser::ParameterContext::type() {
  return getRuleContext<zapParser::TypeContext>(0);
}

tree::TerminalNode* zapParser::ParameterContext::REF() {
  return getToken(zapParser::REF, 0);
}


size_t zapParser::ParameterContext::getRuleIndex() const {
  return zapParser::RuleParameter;
}


std::any zapParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<zapVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

zapParser::ParameterContext* zapParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 22, zapParser::RuleParameter);
  size_t _la = 0;
